--- a/print.html
+++ b/print.html
@@ -5,7 +5,7 @@
   <body>
     <form action = "http://127.0.0.1:5000/success" method = "POST">
       <p> name      :    <input type="text" name = "name"> </p>
-      <p> password  :    <input type="text" name = "pass"> </p>
+      <p> password  :    <input type="password" name = "pass"> </p>
       <input type = "submit" value = "submit">
     </form>
   </body>
